#11 User and user password for elastic search set up.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-db-info.url= localhost
-db-info.port= 9200
-db-info.protocol= http
-db-info.index = eval3
+db-info.url=localhost
+db-info.port=9200
+db-info.protocol=http
+db-info.index=eval3
+db-info.user=
+db-info.password=
