#20 Changed student type from nested to Object part1
add comment in application.properties
add 'convertToNested' method in Elastic DAO  to re-factor Eval DAO
delete retrieveEvalDTO to use only EvalDTO
change searchEval methods in EvalDAO to work with new Student structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+#The Front-End URL
 fe-info.cross = http://localhost:4200
+#Your ElasticSearch API URL
 db-info.url=localhost
+#Your ElasticSearch API PORT
 db-info.port=9200
+#Your ElasticSearch API protocol
 db-info.protocol=http
-db-info.index=eval3
+#ElasticSearch index name to store evals
+db-info.index=eval5
+#Your ElasticSearch Users (empty if no authentification required)
 db-info.user=
+#Your ElasticSearch Password (empty if no authentification required)
 db-info.password=
