--- a/pom.xml
+++ b/pom.xml
@@ -79,15 +79,131 @@
 			<artifactId>validation-api</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.elasticsearch.test</groupId> <artifactId>framework</artifactId> 
+			<version>${elasticsearch.version}</version> <scope>test</scope> </dependency> -->
+
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version><!--$NO-MVN-MAN-VER$ -->
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<!-- <version>3.0.0-M3</version> -->
+				<configuration>
+					<includes>
+						<include>**EvalControllerIT.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
+
+			<plugin>
+				<groupId>com.github.alexcojocaru</groupId>
+				<artifactId>elasticsearch-maven-plugin</artifactId>
+				<!-- THE PLUGIN VERSION; FOR THE LIST OF AVAILABLE VERSIONS, SEE https://github.com/alexcojocaru/elasticsearch-maven-plugin/releases -->
+				<version>6.13</version>
+				<configuration>
+					<!-- THE ELASTICSEARCH VERSION; REPLACE WITH THE VERSION YOU NEED -->
+					<version>${elasticsearch.version}</version>
+					<clusterName>TalentRateTest</clusterName>
+					<transportPort>9300</transportPort>
+					<httpPort>9200</httpPort>
+				</configuration>
+				<executions>
+					<!-- The elasticsearch maven plugin goals are by default bound to the 
+						pre-integration-test and post-integration-test phases -->
+					<execution>
+						<id>start-elasticsearch</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>runforked</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-elasticsearch</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<configLocation>/checkstyle/checkstyle.xml</configLocation>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.10.0</version>
+				<configuration>
+					<linkXref>true</linkXref>
+					<targetJdk>${java.version}</targetJdk>
+					<skipEmptyReport>false</skipEmptyReport>
+					<minimumTokens>75</minimumTokens>
+					<rulesets>
+						<ruleset>/pmd/pmd.xml</ruleset>
+					</rulesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.9</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
 
