--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,25 @@ db-info.index=eval6
 db-info.user=
 #Your ElasticSearch Password (empty if no authentification required)
 db-info.password=
+
+#Keycloak: Name of the realm. REQUIRED.
+keycloak.realm = talentraterealm
+#Keycloak:The base URL of the Keycloak server. All other Keycloak pages and REST service endpoints are derived from this. REQUIRED.
+keycloak.auth-server-url = http://127.0.0.1:8888/auth
+#Keycloak: Ensures that all communication to and from the Keycloak server is over HTTPS. OPTIONAL
+keycloak.ssl-required = external
+#Keycloak: The client-id of the application. Each application has a client-id that is used to identify the application. REQUIRED.
+keycloak.resource = TalentRateCli
+#Keycloak: Secret credential for application authentication to Keycloak server.
+keycloak.credentials.secret=ddc80455-d9e4-4fea-96cd-229a8c74c336
+# ??
+#keycloak.use-resource-role-mappings=false
+
+keycloak.securityConstraints[0].authRoles[0]=prof
+keycloak.securityConstraints[0].authRoles[1]=etudiant
+keycloak.securityConstraints[0].securityCollections[0].name=consulterEval
+keycloak.securityConstraints[0].securityCollections[0].patterns[0]=/eval/
+
+keycloak.securityConstraints[1].authRoles[0]=prof
+keycloak.securityConstraints[1].securityCollections[0].name=gererEval
+keycloak.securityConstraints[1].securityCollections[0].patterns[0]=/eval/
