Add some information about how to disable KeyCloack for dev environnements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ db-info.user=
 #Your ElasticSearch Password (empty if no authentification required)
 db-info.password=
 
+
+##toDisable KeyCloak, use ONLY in DEV environement !
+#spring.autoconfigure.exclude = org.keycloak.adapters.springboot.KeycloakAutoConfiguration
+#keycloak.enabled=false
+
 #Keycloak: Name of the realm. REQUIRED.
 keycloak.realm = talentraterealm
 #Keycloak:The base URL of the Keycloak server. All other Keycloak pages and REST service endpoints are derived from this. REQUIRED.
