--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
+		<java.version>1.8</java.version>
 		<elasticsearch.version>6.6.1</elasticsearch.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -41,7 +42,6 @@
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>elasticsearch-rest-high-level-client</artifactId>
-			<version>6.6.1</version>
 		</dependency>
 
 		<dependency>
@@ -78,12 +78,10 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -92,17 +90,17 @@
 		<!-- <dependency> <groupId>org.elasticsearch.test</groupId> <artifactId>framework</artifactId> 
 			<version>${elasticsearch.version}</version> <scope>test</scope> </dependency> -->
 	</dependencies>
-	
+
 	<dependencyManagement>
-	  <dependencies>
-	    <dependency>
-	      <groupId>org.keycloak.bom</groupId>
-	      <artifactId>keycloak-adapter-bom</artifactId>
-	      <version>6.0.1</version>
-	      <type>pom</type>
-	      <scope>import</scope>
-	    </dependency>
-	  </dependencies>
+		<dependencies>
+			<dependency>
+				<groupId>org.keycloak.bom</groupId>
+				<artifactId>keycloak-adapter-bom</artifactId>
+				<version>6.0.1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 
 	<build>
